--- a/mtlemmon_project/MainMenuView.xib
+++ b/mtlemmon_project/MainMenuView.xib
@@ -41,7 +41,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="289862574"/>
 						<string key="NSReuseIdentifierKey">_NS:567</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -55,7 +55,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 212}, {149, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="108851417"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -68,9 +67,9 @@
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
-						<object class="NSColor" key="IBUINormalTitleColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC42MDMyNjA4Njk2IDAuMTQ4MDQ3OTc3MSAwLjEzMzgyMTU5NjcAA</bytes>
+						<object class="NSColor" key="IBUINormalTitleColor" id="74297562">
+							<int key="NSColorSpace">2</int>
+							<bytes key="NSRGB">MC44MjM1Mjk0ODE5IDAgMC4yNTg4MjM1NDM4AA</bytes>
 						</object>
 						<object class="NSColor" key="IBUINormalTitleShadowColor" id="931268573">
 							<int key="NSColorSpace">3</int>
@@ -91,7 +90,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 302}, {153, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -101,8 +100,8 @@
 						<string key="IBUINormalTitle">About this project</string>
 						<reference key="IBUIHighlightedTitleColor" ref="584915412"/>
 						<object class="NSColor" key="IBUINormalTitleColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+							<int key="NSColorSpace">2</int>
+							<bytes key="NSRGB">MC4wMjM1Mjk0MTQwOSAwLjIxOTYwNzg1OTggMC40NDcwNTg4NTY1AA</bytes>
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="931268573"/>
 						<reference key="IBUIFontDescription" ref="431186974"/>
@@ -113,7 +112,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 257}, {140, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1066418250"/>
 						<string key="NSReuseIdentifierKey">_NS:225</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -123,10 +121,7 @@
 						<int key="IBUIButtonType">1</int>
 						<string key="IBUINormalTitle">Begin GPS Tour</string>
 						<reference key="IBUIHighlightedTitleColor" ref="584915412"/>
-						<object class="NSColor" key="IBUINormalTitleColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC42MDMyNjA4Njk2IDAuMTQ4MDQ3OTc3MSAwLjEzMzgyMTU5NjcAA</bytes>
-						</object>
+						<reference key="IBUINormalTitleColor" ref="74297562"/>
 						<reference key="IBUINormalTitleShadowColor" ref="931268573"/>
 						<reference key="IBUIFontDescription" ref="431186974"/>
 						<reference key="IBUIFont" ref="853101236"/>
@@ -134,8 +129,7 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="289862574"/>
+				<reference key="NSNextKeyView" ref="905303069"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -197,10 +191,10 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="905303069"/>
 							<reference ref="289862574"/>
 							<reference ref="1066418250"/>
 							<reference ref="108851417"/>
+							<reference ref="905303069"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -254,29 +248,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">13</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">MainMenuViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">staticTourPressed:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">staticTourPressed:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">staticTourPressed:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/MainMenuViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
